additional fix of the logo in proportion to the collapser menu

--- a/_components/less/_sbnstyle.less
+++ b/_components/less/_sbnstyle.less
@@ -146,8 +146,8 @@ hr { border: solid #323a3d; border-width: 1px 0 0; clear: both; margin:0 10px 0 
  /* padding-left:5%;
   padding-right:5%;*/
   width: 100%;
-  height: 164px;
-  line-height: 164px;
+  height: 162px;
+  line-height: 162px;
   z-index:2000;
   padding-top:0px;
 
@@ -304,7 +304,7 @@ ul.slimmenu li ul {
 
 .collapse-button {
   position: absolute;
-  top:60px;
+  top:67px;
   right: 5%;
   width: 40px;
   background-image: linear-gradient(to bottom, #151515, #040404);
@@ -504,7 +504,7 @@ ul.slimmenu.collapsed li > ul {
 /* -- Carousel -- */
 
 .carousel-container .row{
-  margin-top:162px;
+  margin-top:164px;
   width: 90%;
   margin-left:auto;
   margin-right:auto;
@@ -1145,12 +1145,13 @@ textarea {
 @media (max-width: 320px) {
 
   .carousel-container .row{
-    margin-top:75px;
+    margin-top:70px;
   }
 
   .carousel-caption {
     font-size: 20px;
     ine-height: 30px;
+      color:green;
   }
 
   #menu-wrap, .navheadr-brand {
@@ -1166,8 +1167,8 @@ textarea {
   }
 
   .collapse-button {
-    line-height:96px;
-    top:27px;
+    line-height:66px;
+    top:30px;
   }
 
 }
@@ -1180,23 +1181,24 @@ textarea {
   .carousel-caption {
     font-size: 25px;
     line-height: 35px;
+      color:blue;
   }
 
   #menu-wrap, .navheadr-brand {
-    height: 100px;
+    height: 105px;
   }
 
   .navheadr-brand {
-    line-height:96px;
+    line-height:101px;
   }
 
   .navheadr-brand img {
-    height:65px;
+    height:68px;
   }
 
    .collapse-button {
-    line-height:96px;
-    top:35px;
+    line-height:101;
+    top:41px;
   }
 
 }
@@ -1204,20 +1206,22 @@ textarea {
 @media (min-width: 480px) and (max-width: 768px) {
 
   .carousel-container .row{
-    margin-top:160px;
+    margin-top:125px;
   }
 
   .carousel-caption {
     font-size: 35px;
     line-height: 45px;
+        color:red;
+
   }
 
   #menu-wrap, .navheadr-brand{
-    height: 155px;
+    height: 125px;
   }
 
   .navheadr-brand{
-    line-height: 151px;
+    line-height: 121px;
   }
 
   .navheadr-brand img {
@@ -1225,8 +1229,8 @@ textarea {
   }
 
   .collapse-button {
-    line-height:151px;
-    top:57px;
+    line-height:121px;
+    top:50px;
   }
 
 }
@@ -1238,6 +1242,8 @@ textarea {
     padding-left:18%;
     padding-right:18%;
   } 
+
+
 
 }
 
